added header and textbox

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>wordle</title>
         <script src="script.js" defer></script>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        
+        <h1>Wordle clone</h1>
+        <div class="container">
+            <div class="box">H</div>
+            <div class="box">E</div>
+            <div class="box">L</div>
+            <div class="box">L</div>
+            <div class="box">O</div>
+        </div>
     </body>
 </html>
